# Plank-road

./: .gitignore  README.md  cal_metrics.py  cloud_server.py  download_model.py  edge_client.py  launch_multi_edge.py  multi_edge_runner.py  pyproject.toml  requirements.txt  test_extract.py
baselines/: __init__.py  accuracy_trigger_cloud_retraining.py  base_method.py  ekya_style_centralized_scheduling.py  method_factory.py  metrics.py  plank_road_multi_device.py  pure_edge_local_updating.py  trigger_utils.py
cloud/: edge_registry.py  global_resource_manager.py
config/: __init__.py  config.yaml  experiment.py  experiment.yaml  runtime.py
docs/: multi-edge-concurrent-training-design.md
edge/: cloud_client.py  drift_detector.py  edge_worker.py  evidence.py  quality_assessor.py  resource_aware_trigger.py  sample_store.py  task.py  transmit.py  window_drift_detector.py
grpc_server/: message_transmission_pb2.py  message_transmission_pb2.pyi  message_transmission_pb2_grpc.py  rpc_server.py  training_jobs.py  workspace.py
model_management/: __init__.py  activation_sparsity.py  candidate_generator.py  candidate_profiler.py  candidate_selector.py  continual_learning_bundle.py  detection_annotations.py  detection_dataset.py  detection_metric.py  detection_transforms.py  download_model.py  fixed_split.py  fixed_split_artifacts.py  fixed_split_runtime_template.py  graph_ir.py  model_delta_payload.py  model_info.py  model_split.py  model_zoo.py  object_detection.py  payload.py  split_candidate.py  split_model_adapters.py  split_runtime.py  tinynext.py  ultralytics_parity.py  (+2 more)
(+51 files in other folders)
